package roguelike;

message GameMessage {
  required string command = 1;
  repeated CellMessage cells = 2;
  repeated CreatureMessage creatures = 3;
  optional int32 player_id = 4;
  repeated int32 fov = 5;
}

message CellMessage {
  required int32 id = 1;
  required sint32 x = 2;
  required sint32 y = 3;
  required string symbol = 4;
  optional int32 creature_id = 5;
}

message CreatureMessage {
  required int32 id = 1;
  required sint32 x = 2;
  required sint32 y = 3;
  required string symbol = 4;
}
